# get_vacancy

./: README.md  pyproject.toml
src/: city.json  interactive.py  main.py  user_utils.py  vac_getter.py  vac_handler.py  vac_writer.py
